<resources>
    <string name="app_name">New Game</string>
    <string name="btn1_value">1</string>
    <string name="btn2_value">2</string>
    <string name="btn3_value">3</string>
    <string name="btn4_value">4</string>
    <string name="btn_start_value">START</string>
    <string name="level_value">Level:</string>
    <string name="record_value">Record:</string>
    <string name="default_value_0">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="free_game">Free Play</string>
    <string name="game">New Game</string>
    <string name="home">Home</string>
    <string name="to_menu">To Menu</string>
    <string name="menu">MENU</string>
    <string name="where_we">And where we go now?</string>
    <string name="about">About</string>
    <string name="about_record">The current record is: %s</string>
    <string name="about_game_conditions">ABOUT THIS GAME\nYou will be a real cool player if you can figure out this game. You will need to repeat the sequence of buttons, remembering them by color or sound…</string>
    <string name="about_the_author">ABOUT AUTHOR\nThis game was written by a pir with the nickname Changsky (School-21, wave: 13)…</string>
    <string name="settings">Settings</string>
    <string name="delay_between_sounds">Delay between sounds (ms)</string>
    <string name="sound">Sound</string>
    <string name="button_highlight">Button highlight</string>
    <string name="animals">Animals</string>
    <string name="humans">Humans</string>
    <string name="effects">Effects</string>
    <string name="sound_themes">Sound themes</string>
</resources>