<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.GameFragment">

    <TextView
        android:id="@+id/recordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:text="@string/record_value"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/recordValueTextView"
        app:layout_constraintTop_toTopOf="@+id/levelValueTextView" />

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/level_value"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recordValueTextView"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:text="@string/default_value_0"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recordTextView" />

    <TextView
        android:id="@+id/levelValueTextView"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/default_value_0"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/levelTextView"
        app:layout_constraintTop_toTopOf="@+id/levelTextView" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="280dp"
        android:background="@color/button1_color"
        android:enabled="false"
        android:text="@string/btn1_value"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="55dp"
        android:background="@color/button2_color"
        android:enabled="false"
        android:text="@string/btn2_value"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="55dp"
        android:background="@color/button3_color"
        android:enabled="false"
        android:text="@string/btn3_value"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="55dp"
        android:background="@color/button4_color"
        android:enabled="false"
        android:text="@string/btn4_value"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="90dp"
        android:background="@color/button_start_color"
        android:text="@string/btn_start_value"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

</androidx.constraintlayout.widget.ConstraintLayout>